--- a/Mica Discord/MainWindow.xaml
+++ b/Mica Discord/MainWindow.xaml
@@ -1,16 +1,37 @@
-﻿<Window x:Class="SystemBackdropTypes.MainWindow"
+﻿<Window x:Class="MicaDiscord.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:local="clr-namespace:MicaDiscord"
+        mc:Ignorable="d"
         Background="Transparent"
         Title="Mica Discord"
+        d:DesignHeight="450" d:DesignWidth="800"
+        d:Background="DimGray"
         xmlns:cg="clr-namespace:CustomGrid">
-    <!--Height="900" Width="800" <- Requires to work with designer-->
 
-    <cg:RowGrid>
-        <wv2:WebView2 x:Name="WebView"
+    <cg:Overlay>
+        <cg:RowGrid>
+            <cg:ColumnGrid x:Name="TitleBar" cg:CustomGrid.GridType="Auto" Height="30">
+                <!--Height here is temperary height for design time-->
+                <TextBlock x:Name="TitleTextBlock" Margin="10,10,10,10" VerticalAlignment="Center" Foreground="White" cg:CustomGrid.GridType="Auto">Mica Discord</TextBlock>
+                <Button VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="White" Click="OpenSettings">Settings</Button>
+                <Grid x:Name="TitleBarDragable"></Grid>
+            </cg:ColumnGrid>
+            <wv2:WebView2 x:Name="WebView"
                   Source="https://discord.com/channels/@me"
                       DefaultBackgroundColor="Transparent"
         />
-    </cg:RowGrid>
+        </cg:RowGrid>
+        <cg:Overlay Visibility="Hidden" x:Name="DialogPlace">
+            <Border Opacity="0.5" Background="Black"></Border>
+            <cg:CenterBoth>
+                <local:SettingsDialog x:Name="SettingsDialog">
+
+                </local:SettingsDialog>
+            </cg:CenterBoth>
+        </cg:Overlay>
+    </cg:Overlay>
 </Window>
