Technical: - Change namespace to be a correct one
Features:
- Implement Systray Icon
- Finally Custom TitleBar
- Dark/White Mode Adaptation (only works if Replace Discord Background setting is enabled)
- Adapt CSS, Dark mode will use light color instead of dark color (and add the setting to be able to turn this off)

--- a/Mica Discord/SettingsDialog.xaml
+++ b/Mica Discord/SettingsDialog.xaml
@@ -66,6 +66,20 @@
                         Unchecked="SystrayToggled">
                     </CheckBox>
                 </cg:ColumnGrid>
+                <cg:ColumnGrid cg:CustomGrid.GridType="Pixel" cg:CustomGrid.GridValue="40">
+                    <Label Foreground="White" VerticalAlignment="Center">
+                        Use Light Color in Dark Mode
+                    </Label>
+                    <CheckBox
+                        x:Name="ModeAwareCSS"
+                        cg:CustomGrid.GridType="Auto"
+                        Foreground="White"
+                        VerticalAlignment="Center"
+                        Margin="10"
+                        Checked="ModeAwareCSSToggled"
+                        Unchecked="ModeAwareCSSToggled">
+                    </CheckBox>
+                </cg:ColumnGrid>
                 <Button Template="{StaticResource NoDisabledBackground}" cg:CustomGrid.GridType="Auto" Foreground="White" VerticalAlignment="Center" FontFamily="Calibri Light" Click="OpenAppFolder">
                     Open App Location Folder
                 </Button>
