--- a/Mica Discord/App.xaml
+++ b/Mica Discord/App.xaml
@@ -1,7 +1,6 @@
-﻿<Application x:Class="BlankWPF.App"
+﻿<Application x:Class="MicaDiscord.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BlankWPF"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ControlTemplate x:Key="NoDisabledBackground" TargetType="{x:Type Button}">
