--- a/Mica Discord/MainWindow.xaml
+++ b/Mica Discord/MainWindow.xaml
@@ -82,31 +82,34 @@
     </Window.Resources>
     <cg:Overlay>
         <cg:RowGrid>
-            <cg:Overlay cg:CustomGrid.GridType="Auto" Height="30" x:Name="TitleBar">
-                <Border Background="{DynamicResource Color}" Opacity="0"></Border>
-                <cg:ColumnGrid x:Name="TitleBarUI">
-                    <!--Height here is temperary height for design time-->
-                    <TextBlock x:Name="TitleTextBlock" Margin="10,10,10,10" VerticalAlignment="Center" Foreground="{DynamicResource Color}" cg:CustomGrid.GridType="Auto">Mica Discord</TextBlock>
-                    <Button x:Name="Back" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40">
-                        <Image Source="{StaticResource ArrowLeft}" Width="20" Height="30"/>
-                    </Button>
-                    <Button x:Name="Forward" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40">
-                        <Image Source="{StaticResource ArrowRight}" Width="20" Height="30"/>
-                    </Button>
-                    <Button x:Name="Reload" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40" Click="RefreshPage">
-                        <Image Source="{StaticResource Reload}" Width="20" Height="30"/>
-                    </Button>
-                    <Button x:Name="Setting" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Click="OpenSettings" Width="40" Height="40">
-                        <Image Source="{StaticResource Gear}" Width="20" Height="30"/>
-                    </Button>
-                    <Grid x:Name="TitleBarDragable" Height="50" VerticalAlignment="Center">
-                        <TextBlock x:Name="WebsiteTitle" Margin="10,10,10,10" VerticalAlignment="Center" Foreground="{DynamicResource Color}" cg:CustomGrid.GridType="Auto"></TextBlock>
-                    </Grid>
-                </cg:ColumnGrid>
-            </cg:Overlay>
+            <Border cg:CustomGrid.GridType="Auto">
+                <cg:Overlay x:Name="TitleBar" VerticalAlignment="Top" Height="30">
+                    <Border Background="{DynamicResource Color}" Opacity="0"></Border>
+                    <cg:ColumnGrid x:Name="TitleBarUI">
+                        <!--Height here is temperary height for design time-->
+                        <TextBlock x:Name="TitleTextBlock" Margin="10,10,10,10" VerticalAlignment="Center" Foreground="{DynamicResource Color}" cg:CustomGrid.GridType="Auto">Mica Discord</TextBlock>
+                        <Button x:Name="Back" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40">
+                            <Image Source="{StaticResource ArrowLeft}" Width="20" Height="30"/>
+                        </Button>
+                        <Button x:Name="Forward" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40">
+                            <Image Source="{StaticResource ArrowRight}" Width="20" Height="30"/>
+                        </Button>
+                        <Button x:Name="Reload" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40" Click="RefreshPage">
+                            <Image Source="{StaticResource Reload}" Width="20" Height="30"/>
+                        </Button>
+                        <Button x:Name="Setting" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Click="OpenSettings" Width="40" Height="40">
+                            <Image Source="{StaticResource Gear}" Width="20" Height="30"/>
+                        </Button>
+                        <Grid x:Name="TitleBarDragable" Height="50" VerticalAlignment="Center">
+                            <TextBlock x:Name="WebsiteTitle" Margin="10,10,10,10" VerticalAlignment="Center" Foreground="{DynamicResource Color}" cg:CustomGrid.GridType="Auto"></TextBlock>
+                        </Grid>
+                    </cg:ColumnGrid>
+                </cg:Overlay>
+            </Border>
             <wv2:WebView2 x:Name="WebView"
                   Source="https://discord.com/channels/@me"
                       DefaultBackgroundColor="Transparent"
+
             />
         </cg:RowGrid>
         <cg:Overlay Visibility="Hidden" x:Name="DialogPlace">
