--- a/Mica Discord/MainWindow.xaml
+++ b/Mica Discord/MainWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="MicaDiscord.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:local="clr-namespace:MicaDiscord"
@@ -14,6 +13,7 @@
         xmlns:shell="using:System.Windows.Shell"
         xmlns:ui="http://schemas.modernwpf.com/2019">
     <Window.Resources>
+        <FontFamily x:Key="IconFont">Segoe Fluent Icons</FontFamily>
         <SolidColorBrush x:Key="Color" Color="White"/>
         <DrawingImage x:Key="ArrowLeft">
             <DrawingImage.Drawing>
@@ -77,40 +77,44 @@
         </Style>
     </Window.Resources>
     <cg:Overlay>
-        <cg:RowGrid>
+        <cg:RowGrid x:Name="WebView2AddHere">
             <Border cg:CustomGrid.GridType="Auto">
                 <cg:Overlay x:Name="TitleBar" VerticalAlignment="Top" Height="30">
                     <Border Background="{DynamicResource Color}" Opacity="0"></Border>
-                    <cg:ColumnGrid x:Name="TitleBarUI">
+                    <cg:ColumnGrid>
                         <!--Height here is temperary height for design time-->
-                        <TextBlock x:Name="TitleTextBlock" Margin="10,10,10,10" VerticalAlignment="Center" Foreground="{DynamicResource Color}" cg:CustomGrid.GridType="Auto">Mica Discord</TextBlock>
-                        <Button x:Name="Back" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40">
-                            <Image Source="{StaticResource ArrowLeft}" Width="20" Height="30"/>
+                        <TextBlock Margin="10,10,10,10" x:Name="TitleText" VerticalAlignment="Center" Foreground="{DynamicResource Color}" cg:CustomGrid.GridType="Auto">Mica Discord</TextBlock>
+                        <Button x:Name="Back" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40" FontFamily="{DynamicResource IconFont}">
+                            <!--<Image Source="{StaticResource ArrowLeft}" Width="20" Height="30"/>-->
+                            &#xE112;
                         </Button>
-                        <Button x:Name="Forward" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40">
-                            <Image Source="{StaticResource ArrowRight}" Width="20" Height="30"/>
+                        <Button x:Name="Forward" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40" FontFamily="{DynamicResource IconFont}">
+                            <!--<Image Source="{StaticResource ArrowRight}" Width="20" Height="30"/>-->
+                            &#xE111;
                         </Button>
-                        <Button x:Name="Reload" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40" Click="RefreshPage">
-                            <Image Source="{StaticResource Reload}" Width="20" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+                        <Button x:Name="Reload" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Width="40" Height="40" Click="RefreshPage" FontFamily="{DynamicResource IconFont}">
+                            <!--<Image Source="{StaticResource Reload}" Width="20" Height="30" VerticalAlignment="Center" HorizontalAlignment="Center" RenderTransformOrigin="0.5,0.5">
                                 <Image.RenderTransform>
                                     <ScaleTransform ScaleX="-1"/>
                                 </Image.RenderTransform>
-                            </Image>
+                            </Image>-->
+                            &#xE149;
                         </Button>
-                        <Button x:Name="Setting" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Click="OpenSettings" Width="40" Height="40">
-                            <Image Source="{StaticResource Gear}" Width="20" Height="30"/>
+                        <Button x:Name="Setting" Template="{StaticResource NoDisabledBackground}" VerticalAlignment="Center" cg:CustomGrid.GridType="Auto" Foreground="{DynamicResource Color}" Background="Transparent" Click="OpenSettings" Width="40" Height="40" FontFamily="{DynamicResource IconFont}">
+                            <!--<Image Source="{StaticResource Gear}" Width="20" Height="30"/>-->
+                            &#xE115;
                         </Button>
                         <Grid x:Name="TitleBarDragable" Height="50" VerticalAlignment="Center">
                             <TextBlock x:Name="WebsiteTitle" Margin="10,10,10,10" VerticalAlignment="Center" Foreground="{DynamicResource Color}" cg:CustomGrid.GridType="Auto"></TextBlock>
                         </Grid>
+                        <StackPanel x:Name="TitleBarCaptionButtons" Orientation="Horizontal" cg:CustomGrid.GridType="Auto" Visibility="Collapsed">
+                            <Button Content="-" Width="40" Height="40" Template="{StaticResource NoDisabledBackground}" Foreground="{DynamicResource Color}" VerticalAlignment="Center" Click="Minimize"/>
+                            <Button Content="❏" Width="40" Height="40" Template="{StaticResource NoDisabledBackground}" Foreground="{DynamicResource Color}" VerticalAlignment="Center" Click="Maximize"/>
+                            <Button Content="X" Width="40" Height="40" Template="{StaticResource NoDisabledBackground}" Foreground="{DynamicResource Color}" VerticalAlignment="Center" Click="Close"/>
+                        </StackPanel>
                     </cg:ColumnGrid>
                 </cg:Overlay>
             </Border>
-            <wv2:WebView2 x:Name="WebView"
-                  Source="https://discord.com/channels/@me"
-                      DefaultBackgroundColor="Transparent"
-
-            />
         </cg:RowGrid>
         <cg:Overlay Visibility="Hidden" x:Name="DialogPlace">
             <Border Opacity="0.5" Background="Black"></Border>
